// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Sidebar /> should render without crashing and match snapshot 1`] = `
<DocumentFragment>
  .c0 {
  min-width: 290px;
  border-right-width: 1px;
  --tw-border-opacity: 1;
  border-color: rgb(55 65 81 / var(--tw-border-opacity));
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  min-width: 290px;
}

<div
    class="c0"
  />
</DocumentFragment>
`;

exports[`<Sidebar /> should render without crashing and match snapshot with mini sidebar 1`] = `
<DocumentFragment>
  .c0 {
  min-width: 290px;
  border-right-width: 1px;
  --tw-border-opacity: 1;
  border-color: rgb(55 65 81 / var(--tw-border-opacity));
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  min-width: 80px;
}

<div
    class="c0"
  />
</DocumentFragment>
`;
